Registraion page: -reworked warning message function (it can be used now everywhere in the application without any changes); -added email validation handling for server response from DB;
Login page:
-Login functionality made(not completed for release).

Database:
-added Mongoose connection;
-created user model for DB;

Server:
-added route handling for registration POST route;
-added user model errors handling in error handling middleware;

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -222,3 +222,17 @@ footer p{
     font-size: 80%;
     margin-bottom: 0%;
 }
+#submit-warning{
+    color: red;
+    text-align: center;
+    margin-top: 2%;
+    font-size: 80%;
+    margin-bottom: 0%;
+}
+#form-warning{
+    color: red;
+    text-align: center;
+    margin-top: 2%;
+    font-size: 80%;
+    margin-bottom: 0%;
+}
