User List: - added user list support; Main window: - UserName display was added; - Send messages feature now using Socket.IO; - Socket middleware was added to Redux store; Server: - Reworked authorization; - Session support was added; - Added login validation; - Express routing was moved to separate directory; - Socket.IO support was added;

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -236,3 +236,10 @@ footer p{
     font-size: 80%;
     margin-bottom: 0%;
 }
+#loginSubmit-warning{
+    color: red;
+    text-align: center;
+    margin-top: 2%;
+    font-size: 80%;
+    margin-bottom: 0%;
+}
